--- a/client/src/App.css
+++ b/client/src/App.css
@@ -68,6 +68,15 @@
 /* .table-reosponsive {
   display: table;
 } */
-.table {
-  display: block !important;
+table,
+thead,
+tr,
+tbody,
+th,
+td {
+  text-align: center;
+}
+
+.table td {
+  text-align: center !important;
 }
